added new comments